<resources>

    <string name="app_name">臺北市立動物園</string>

    <string name="no_place_info">無場館資訊</string>
    <string name="open_web">在網頁開啟</string>
    <string name="animal_info">動物資料</string>
    
    <string name="category">分類</string>
    <string name="distribution">棲息地</string>
    <string name="feature">外觀</string>
    <string name="behavior">習性</string>
    <string name="latest_updated">最後更新：</string>

</resources>